tests/Schema/expected
[<("name", String), ("age", Nat), ("favorite color", String)]

[<"name", "age", "favorite color"]
[<String, Nat, String]

[<("name", String), ("favorite color", String)]
[<("name", String), ("age", Nat)]
Error: Can't find an implementation for Field exampleSchema "grade" ?sa.

(Interactive):1:24--1:31
 1 |     drop exampleSchema "grade"
                            ^^^^^^^


[<("name", String), ("favorite color", String)]
[<("name", String), ("age", Nat)]
Error: Can't find an implementation for HasIndex exampleSchema (There (There (There (There ?sa)))) 3.

(Interactive):1:24--1:25
 1 |     drop exampleSchema 3
                            ^


